[gd_scene load_steps=2 format=3 uid="uid://c3xfwo5if6dnq"]

[ext_resource type="Script" path="res://scenes/menu.gd" id="1_fh6wt"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_fh6wt")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1082.0
offset_bottom = 2399.0
color = Color(0.983998, 0.965783, 0.848374, 1)
metadata/_edit_lock_ = true

[node name="Host" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 336.0
offset_top = 687.0
offset_right = 730.0
offset_bottom = 987.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 56
text = "HOST"

[node name="Join" type="Button" parent="."]
offset_left = 335.0
offset_top = 1077.0
offset_right = 729.0
offset_bottom = 1377.0
theme_override_font_sizes/font_size = 56
text = "JOIN
"

[node name="StartGame" type="Button" parent="."]
offset_left = 335.0
offset_top = 1453.0
offset_right = 729.0
offset_bottom = 1753.0
theme_override_font_sizes/font_size = 56
text = "START GAME"

[connection signal="button_down" from="Host" to="." method="_on_host_button_down"]
[connection signal="button_down" from="Join" to="." method="_on_join_button_down"]
[connection signal="button_down" from="StartGame" to="." method="_on_start_game_button_down"]
